Issues were fixed. (16)